<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_source_code"
            android:icon="@drawable/ic_code_black_24dp"
            android:title="@string/menu_source_code" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/menu_about" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_email"
                android:icon="@drawable/ic_email_black_24dp"
                android:title="@string/menu_email" />
            <item
                android:id="@+id/nav_support"
                android:icon="@drawable/ic_support_black_24dp"
                android:title="@string/menu_support" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help_black_24dp"
                android:title="@string/menu_help" />
        </menu>
    </item>

</menu>